envoy-proxy/envoy-dynamic.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000

node:
  cluster: mycluster
  id: test-id

static_resources:
  listeners:
  - name: listener_0

    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443

    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: targetCluster }
          http_filters:
          - name: envoy.router
      tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/cert.pem"
              private_key:
                filename: "/key.pem"
          alpn_protocols: ["h2"]

  clusters:
  - name: targetCluster
    type: EDS
    connect_timeout: 0.25s
    eds_cluster_config:
      service_name: myservice
      eds_config:
        api_config_source:
          api_type: REST
          cluster_names: [eds_cluster]
          refresh_delay: 5s
    tls_context:
        common_tls_context:
          tls_certificates:
            - certificate_chain:
                filename: "/cert.pem"
              private_key:
                filename: "/key.pem"

  - name: eds_cluster
    type: STRICT_DNS
    connect_timeout: 0.25s
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: eds-server, port_value: 5000 }}]
