envoy-proxy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
      filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: udr_service
        # tls_context:
        #   common_tls_context:
        #     tls_certificates:
        #       certificate_chain: { "filename": "/localhost.crt" }
        #       private_key: { "filename": "/localhost.key" }
          http_filters:
          - name: envoy.router

  clusters:
  - name: udr_service
    # http2_protocol_options: {}
    connect_timeout: 0.25s
    lb_policy: LEAST_REQUEST
    type: STRICT_DNS
    health_checks:
    - timeout: 1s
      interval: 3s
      interval_jitter: 1s
      unhealthy_threshold: 1
      healthy_threshold: 2
      tcp_health_check: {}
      event_log_path: /dev/stdout
    load_assignment:
      cluster_name: udr_service
      endpoints:
      - priority: 0
        lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: udr1
                port_value: 5000
      # - priority: 1
      #   lb_endpoints:
      #   - endpoint:
      #       address:
      #         socket_address:
      #           address: udr2
      #           port_value: 443
    # tls_context:
    #   common_tls_context:
    #     tls_certificates:
    #       certificate_chain: { "filename": "/localhost.crt" }
    #       private_key: { "filename": "/localhost.key" }
